--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!doctype HTML>
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
 	<title>Wireframe</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 	<header>
-		Header
+		<p>Header</p>
 	</header>
-	
+
 	<nav>
 		Navigation
 	</nav>
@@ -23,12 +23,12 @@
 				<p>Paragraph</p>
 			</article>
 		</section>
-		<aside>
+		<aside class="clear">
 			<h4>Aside</h4>
 		</aside>
 	</main>
 
-	<footer>Footer</footer>
+	<footer class="clear">Footer</footer>
 
 </body>
 </html>
