correcte code, finished

--- a/index.html
+++ b/index.html
@@ -14,21 +14,26 @@
 		Navigation
 	</nav>
 
-
-	<main>
-		<section>
+	<section>
+		<heading>
 			<p>Section</p>
+		</heading>
 			<article>
-				<h3>Article</h3>
-				<p>Paragraph</p>
+				<heading>Article</heading>
+				<h3>h1, h2, h3</h3>
 			</article>
-		</section>
-		<aside class="clear">
-			<h4>Aside</h4>
-		</aside>
-	</main>
+	</section>
+	<aside>
+		<heading>
+			<p>Aside</p>
+		</heading>
+	</aside>
 
-	<footer class="clear">Footer</footer>
+	<div class="clear"></div>
+
+	<footer>
+		<p>Footer</p>
+	</footer>
 
 </body>
 </html>
